--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>YouTube Embed</title>
+  <title>YouTube AutoPlay</title>
 </head>
-<body style="margin:0; padding:0; display:flex; justify-content:center; align-items:center; height:100vh; background:#000;">
+<body style="margin:0; padding:0; background:#000; display:flex; justify-content:center; align-items:center; height:100vh;">
   
-  <!-- هنا بتحط لينك الفيديو -->
-  <iframe width="560" height="315" 
-          src="https://www.youtube.com/embed/GXeoz8VN4-A?autoplay=0&modestbranding=1&rel=0" 
+  <iframe width="100%" height="100%"
+          src="https://www.youtube.com/embed/GXeoz8VN4-A?autoplay=1&mute=1&controls=0&modestbranding=1&rel=0" 
           title="YouTube video player" 
           frameborder="0" 
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen>
   </iframe>
 
